--- a/my-app/src/Pages/Forecast/Forecast.css
+++ b/my-app/src/Pages/Forecast/Forecast.css
@@ -1,6 +1,6 @@
 .forecast-container {
   width: 100%;
-  height: 100%;
+  height: 90vh;
   margin-top: 75px;
 
   text-align: center;
@@ -10,6 +10,7 @@
 .forecast-container h1 {
   font-size: 48px;
   margin-bottom: 10px;
+  padding-top: 60px;
 }
 
 .forecast-container h2 {
