--- a/my-app/src/components/Footer/Footer.css
+++ b/my-app/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  margin-top: 80px;
+  
   padding: 40px 20px;
   position: relative;
 
